--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: My sample book
-author: The Jupyter Book Community
-logo: logo.png
+title: Machine Learning and Glaciology Workshop
+author: The Instructors
+logo: finse.png
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
